# kiroku-server

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
schemes/anilist/: schema.json
schemes/anilist/queries/: ongoing_query.graphql  viewer.graphql
src/: App.tsx  errors.rs  index.css  main.rs  main.tsx  packager.rs
src-server/: .gitignore  Cargo.toml  build.rs  openapi.yaml
src-server/.sqlx/: query-6f5c1416bdc8ff36ec672a78ed362f98580fe44365b85b39f1efd65dca267fd5.json
src-server/migrations/: 20260612151031_sessions.sql  20260612154226_session_user_id.sql  20260612163310_episode.sql  20260612193404_processing.sql  20260612212417_metadata.sql  20260614124342_rewrite_processing.sql  20260614130510_file_path_nullable.sql  20260614130634_id_string.sql  20260614140728_queue_item_ref_string.sql  20260616152022_new_processing_status.sql
src-server/schemes/anilist/: schema.graphql
src-server/schemes/anilist/queries/: media_details.graphql
src-server/src/: config.rs  errors.rs  main.rs  packager.rs
src-server/src/api/: handlers.rs  mod.rs  payloads.rs  routes.rs  server.rs
src-server/src/api/auth/: mod.rs  payloads.rs
src-server/src/api/episode/: mod.rs  payloads.rs
src-server/src/api/media/: mod.rs
src-server/src/domain/: models.rs  traits.rs
src-server/src/infrastructure/: episode_repo.rs  media_processor.rs  media_repo.rs  mod.rs  session.rs  user.rs
src-server/src/infrastructure/anilist/: mod.rs
src-server/src/infrastructure/anilist/queries/: fragments.rs  media_details.rs  mod.rs  ongoing.rs  viewer.rs
src-server/src/infrastructure/database/: connection.rs  migration.rs  mod.rs
src-server/src/infrastructure/packager/: metadata.rs  mod.rs  service.rs
src/anilist/: client.rs  mod.rs
src/api/: api-client.ts  handlers.rs  mod.rs  ongoing.query.ts  processed.query.ts  profile.query.tsx  query-client.tsx  routes.rs  schema.d.ts  server.rs
src/components/: OngoingMedia.tsx  Profile.tsx
src/database/: migration.rs  mod.rs  table.rs
src/domain/: models.rs  traits.rs
src/infrastructure/: media_processor.rs  mod.rs  session.rs
src/infrastructure/database/: migration.rs
src/infrastructure/packager/: metadata.rs  (+1 more)
src/layout/: HomeLayout.tsx
src/routes/: EpisodePlayer.tsx  Home.tsx  Media.tsx
