[package]
name = "kiroku-server"
version = "0.1.0"
edition = "2024"
default-run = "kiroku-server"

[[bin]]
name = "kiroku-server"
path = "src/main.rs"

[dependencies]
tokio-util = "0.7.18"
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.149"
axum = "0.8.9"
mdns-sd = "0.19.1"
thiserror = "1.0.69"
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
directories = "6.0.0"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
local-ip-address = "0.6.12"
tower-http = { version = "0.6.10", features = ["fs"] }
cynic = { version = "3", features = ["reqwest"] }
toml = "1.1.2+spec-1.1.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio","sqlite"] }
serde_plain = "1.0.2"
nanoid = "0.5.0"
rand = "0.9.4"

[build-dependencies]
cynic-codegen = { version = "3" }